force-app/main/default/objects/Customer_Profile_Updates__c/Customer_Profile_Updates__c.object-meta.xml
<CustomObject>
    <description>This custom object is a staging object which will store the changes made by the bankers on Account and all Contact Point objects.</description>
    <label>Pending Updates to Customer Details</label>
    <nameField>
        <label>Customer Profile Updates Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pending Updates to Customer Details</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>