force-app/main/default/objects/Customer_Profile_Updates__c/fields/AsIsValue__c.field-meta.xml
<CustomField>
    <fullName>AsIsValue__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - Salesforce</complianceGroup>
    <description>This will be a JSON formatted structure of all the attribute with existing values.This is a back end field which will be used in the payloads pushed by the platform event subscribed by Mulesoft</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>AsIsValue</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>