force-app/main/default/objects/Customer_Profile_Updates__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Case</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Pending Updates to Customer Details</relationshipLabel>
    <relationshipName>Customer_Profile_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>