force-app/main/default/objects/Customer_Profile_Updates__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This will be a lookup on Customer&apos;s Profile (Accounts).</description>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pending Updates to Customer Details</relationshipLabel>
    <relationshipName>Customer_Profile_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>