force-app/main/default/objects/Customer_Profile_Updates__c/fields/Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Status__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy_Personal_Information;Source - OCV</complianceGroup>
    <description>Associated Customer Records Status</description>
    <formula>TEXT(Customer_Name__r.FinServ__Status__c)</formula>
    <label>Customer Status</label>
    <type>Text</type>
</CustomField>