force-app/main/default/objects/Customer_Profile_Updates__c/fields/Error_Description__c.field-meta.xml
<CustomField>
    <fullName>Error_Description__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Error Description in case of failures.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Error Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>