force-app/main/default/objects/Customer_Profile_Updates__c/fields/NewValue__c.field-meta.xml
<CustomField>
    <fullName>NewValue__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - Salesforce</complianceGroup>
    <description>JSON formatted body structure of New values.</description>
    <label>New Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>