force-app/main/default/objects/Customer_Profile_Updates__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>To identify object where this update is happening. Eg Account, Contact, ContactPointXXXX.</description>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>