force-app/main/default/objects/Customer_Profile_Updates__c/fields/Occurrence_Number__c.field-meta.xml
<CustomField>
    <fullName>Occurrence_Number__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>Source&apos; Occurrence Number.</description>
    <label>Occurrence Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>