force-app/main/default/objects/Customer_Profile_Updates__c/fields/OCV_Id__c.field-meta.xml
<CustomField>
    <fullName>OCV_Id__c</fullName>
    <description>Formula field to refer customer OCV Id</description>
    <formula>Customer_Name__r.OCV_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OCV Id</label>
    <type>Text</type>
</CustomField>