force-app/main/default/objects/Customer_Profile_Updates__c/fields/OCV_Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>OCV_Profile_Id__c</fullName>
    <description>Formula field to get customer profile Id</description>
    <formula>Customer_Name__r.OCV_Profile_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OCV Profile Id</label>
    <type>Text</type>
</CustomField>