force-app/main/default/objects/Customer_Profile_Updates__c/fields/OldValue__c.field-meta.xml
<CustomField>
    <fullName>OldValue__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - Salesforce</complianceGroup>
    <description>This will be a JSON formatted structure of all the attribute with existing values.</description>
    <label>Old Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>