force-app/main/default/objects/Customer_Profile_Updates__c/fields/Source_System_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_System_ID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>Associated Customer Records Source System ID</description>
    <formula>Customer_Name__r.Source_System_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source System ID</label>
    <type>Text</type>
</CustomField>