force-app/main/default/objects/Customer_Profile_Updates__c/fields/ToBeValue__c.field-meta.xml
<CustomField>
    <fullName>ToBeValue__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - Salesforce</complianceGroup>
    <description>JSON formatted body structure of New values.This is a back end field which will be used in the payloads pushed by the platform event subscribed by Mulesoft</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>ToBeValue</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>