force-app/main/default/objects/Customer_Profile_Updates__c/fields/TriggeredFrom__c.field-meta.xml
<CustomField>
    <fullName>TriggeredFrom__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>To identify object where this update is happening.Eg Account, Contact, ContactPointXXXX. This is a back end field which will be used in the payloads pushed by the platform event subscribed by Mulesoft</description>
    <encryptionScheme>None</encryptionScheme>
    <label>TriggeredFrom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>