force-app/main/default/objects/Customer_Profile_Updates__c/fields/UserLanId__c.field-meta.xml
<CustomField>
    <fullName>UserLanId__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Capture Updated user&apos;s Lan_Id__c from User object</description>
    <label>UserLanId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>